Analyse syntaxique des requêtes envoyées par l'utilisateur